--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
         });
     </script>
 
-    <!-- next_update -->
-    <!-- 
-        1. ripple effects 
-        2. 게임별 X 표시 (전체복사 눌렀을때 X는 안떠야함)
-        3.....
-    -->
+<!--
+    [next_update]
+    - PC 버전 
+    - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
+    - ripple effects 
+-->
 
 </body>
 
