--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
 
     <!--
     [next_update]
-    - PC 버전 
+    - ripple effects (📌)
+    - Icon logo Redesign(📌)
     - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
-    - ripple effects 
-    - alert이 아닌 popup
-    - Icon logo Redesign
-    -
+    - PC 버전 
+
+    - (🔪) alert이 아닌 popup (🔪)
 -->
 
 </body>
