--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <p class="group_title">게임 A</p>
                     <button class="regenerate" data-group="groupA"><i class="fas fa-sync-alt"></i>
                     </button>
+                    <!-- <button class="disable_x">
+                        <i class="fas fa-close"></i>
+                    </button> -->
                     <div class="group_one_line">
                         <ul class="group" id="groupA"></ul>
                         <button class="copy" data-group="groupA"><i class="fas fa-solid fa-clipboard"></i></button>
@@ -62,6 +65,9 @@
                 <div class="group_wrap">
                     <p class="group_title">게임 B</p>
                     <button class="regenerate" data-group="groupB"><i class="fas fa-sync-alt"></i></button>
+                    <!-- <button class="disable_x">
+                        <i class="fas fa-close"></i>
+                    </button> -->
                     <div class="group_one_line">
                         <ul class="group" id="groupB"></ul>
                         <button class="copy" data-group="groupB"><i class="fas fa-solid fa-clipboard"></i></button>
@@ -71,6 +77,9 @@
                 <div class="group_wrap">
                     <p class="group_title">게임 C</p>
                     <button class="regenerate" data-group="groupC"><i class="fas fa-sync-alt"></i></button>
+                    <!-- <button class="disable_x">
+                        <i class="fas fa-close"></i>
+                    </button> -->
                     <div class="group_one_line">
                         <ul class="group" id="groupC"></ul>
                         <button class="copy" data-group="groupC"><i class="fas fa-solid fa-clipboard"></i></button>
@@ -80,6 +89,9 @@
                 <div class="group_wrap">
                     <p class="group_title">게임 D</p>
                     <button class="regenerate" data-group="groupD"><i class="fas fa-sync-alt"></i></button>
+                    <!-- <button class="disable_x">
+                        <i class="fas fa-close"></i>
+                    </button> -->
                     <div class="group_one_line">
                         <ul class="group" id="groupD"></ul>
                         <button class="copy" data-group="groupD"><i class="fas fa-solid fa-clipboard"></i></button>
@@ -89,6 +101,9 @@
                 <div class="group_wrap">
                     <p class="group_title">게임 E</p>
                     <button class="regenerate" data-group="groupE"><i class="fas fa-sync-alt"></i></button>
+                    <!-- <button class="disable_x">
+                        <i class="fas fa-close"></i>
+                    </button> -->
                     <div class="group_one_line">
                         <ul class="group" id="groupE"></ul>
                         <button class="copy" data-group="groupE"><i class="fas fa-solid fa-clipboard"></i></button>
