--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <!--
     [next_update]
     - ripple effects (📌)
+    - 뽑아진 6자리 수를 오름차순으로 정렬해서 보이기 (📌)
     - Icon logo Redesign(📌)
     - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
     - PC 버전 
