--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
     - Icon logo Redesign(📌)
     - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
     - PC 버전 
+    - 로딩화면
+    - 내 카톡으로 보내기
 
     - (🔪) alert이 아닌 popup (🔪)
 -->
