--- a/index.html
+++ b/index.html
@@ -315,6 +315,12 @@
     - 로딩화면
     - 내 카톡으로 보내기
 
+
+- 복사됏음 팝업뜨고 뒤로가기 누르면 히스토리 백 되게?  해서 ->아무튼. 팝업닫게 하고싶음.
+-진동줄수있을까?(심화) 흔들어서 전부 새로제너레이트 할수있나?
+(흔들어서 한다면 흔들엇을때 공섞이는 애니 줄수잇을까)(엄청 심화)
+
+
     - (🔪) alert이 아닌 popup (🔪)
 -->
 
