--- a/index.html
+++ b/index.html
@@ -278,26 +278,29 @@
     </script>
 
     <!--
-    [next_update]
-    - ripple effects (📌)
+    [Next_update]
     - Icon logo Redesign(📌)
-    - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
-    - PC 버전 
+    - ripple effects (📌)
     - 로딩화면
-    - 내 카톡으로 보내기
+    - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
     - 복사됏음 팝업뜨고 뒤로가기 누르면 히스토리 백 되게?  해서 아무튼. 팝업닫게끔.
+    
+    
+    - 내 카톡으로 보내기
+    - PC 버전 
 
-    [🗯]
+    [🟡]
     -진동줄수있을까?(심화) 흔들어서 전부 새로제너레이트 할수있나?
     (흔들어서 한다면 흔들엇을때 공섞이는 애니 줄수잇을까)(엄청 심화)
 
     [🔪]
     - alert이 아닌 popup으로 복사한 숫자 보여주기
     - 뽑아진 6자리 수를 오름차순으로 정렬해서 보이기
+    - Hesper's ins.... padding이상. (수정후, none시켜놓음)
 
 
     [Check ✅]
-    - Hesper's instar.. padding이상.
+   
 -->
 
 </body>
