아이디어추

--- a/index.html
+++ b/index.html
@@ -276,7 +276,6 @@
             });
         });
     </script>
-
     <!--
     [Next_update]
     - Icon logo Redesign(📌)
@@ -284,8 +283,8 @@
     - 로딩화면
     - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함)
     - 복사됏음 팝업뜨고 뒤로가기 누르면 히스토리 백 되게?  해서 아무튼. 팝업닫게끔.
-    
-    
+    - 나중에 BK테마로 바꾸기 (bg #2C363F)
+
     - 내 카톡으로 보내기
     - PC 버전 
 
