--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <h1>복사완료😎</h1>
                                 <p>복사번호 들어갈 곳</p>
                                 <div class="empty_num" style="display:none;">
-                                    <img src="/asset/잔상.png">
+                                    <img src="asset/잔상.png">
                                 </div>
                                 
                             </div>
