--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="footer_btn_wrap">
                 <div class="only_side_wrap">
                     <div class="sheet_top_img">
-                        <img class="profile_plz_gif" src="/asset/ani_icon_3d_copy.gif">
+                        <img class="profile_plz_gif" src="asset/ani_icon_3d_copy.gif">
                     </div>
                     <div class="sheet_top">
                         <p class="sheet_title">복사완료!</p>
