애널리틱스 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N292L31TGB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-N292L31TGB');
+    </script>
+
 </head>
 
 <body>
@@ -201,8 +215,9 @@
     </div>
     <footer>
         <p class="footer_text" id="update_show">Hesper 가 만든 로또추첨기</p>
-        <p class="footer_text ver">Ver 1.8<span> 23-01-13</span></p>
+        <p class="footer_text ver">Ver 1.9<span> 23-02-24</span></p>
         <div class="ver_history">
+            <p class="footer_text">Ver 1.9 - 애널리틱스 달기 <span> 23-02-24</span></p>
             <p class="footer_text">Ver 1.8 - 팝업X 바텀시트로 변경(요즘 st.) 아이콘도 3D로 변경<span> 24-01-13</span></p>
             <p class="footer_text">Ver 1.7 - 로또톡톡으로 변경 (코드만)(음성리딩 개발중)+번호별색변경,당첨된 번호 크롤링개발중<span> 24-01-01/05</span></p>
             <p class="footer_text">Ver 1.6 - 스토어에 chat gpt 등재로 앱내려가서 2개월만에 다시올림, PC에서 모바일로보이게 사이즈 수정<span>
