로또톡톡 BI 헤더넣음

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N292L31TGB"></script>
     <script>
@@ -30,9 +29,6 @@
 
 <body>
     <!-- 팝업 -->
-    <!-- 팝업 -->
-    <!-- 팝업 -->
-
     <!-- 이제 이 팝업 안쓰고 bottomsheets 씀 -->
     <!-- <div class="popup_modal">
         <div class="size_change">
@@ -51,15 +47,10 @@
             </div>
         </div>
     </div> -->
-
-    <!-- 팝업 -->
-    <!-- 팝업 -->
     <!-- 팝업 -->
 
 
 
-    <!-- 바텀시트 -->
-    <!-- 바텀시트 -->
     <!-- 바텀시트 -->
     <!-- 바텀시트 공통 이미지도 들어갈시 (머머하기/완료)-->
     <div class="sheet_wrap popup_modal" style="display:none;">
@@ -106,7 +97,10 @@
         <!-- 오른쪽 빨간 로또 테두리선 -->
         <div class="sideline"></div>
         <div class="all_center_wrap">
-            <p class="big_title">LOTTO TALKTALK</p>
+            <!-- <p class="big_title">LOTTO TALKTALK</p> -->
+            <div class="big_tit_logo">
+                    <img class="" src="/asset/로또톡톡_헤더.png">
+            </div>
 
             <div class="group_inner_gap_wrap">
                 <div class="group_wrap clearfix">
@@ -215,8 +209,9 @@
     </div>
     <footer>
         <p class="footer_text" id="update_show">Hesper 가 만든 로또추첨기</p>
-        <p class="footer_text ver">Ver 1.9<span> 23-02-24</span></p>
+        <p class="footer_text ver">Ver 2.0<span> 23-03-11</span></p>
         <div class="ver_history">
+            <p class="footer_text">Ver 2.0 - '로또톡톡' BI 제작 및 헤더에 넣기 <span> 23-03-11</span></p>
             <p class="footer_text">Ver 1.9 - 애널리틱스 달기 <span> 23-02-24</span></p>
             <p class="footer_text">Ver 1.8 - 팝업X 바텀시트로 변경(요즘 st.) 아이콘도 3D로 변경<span> 24-01-13</span></p>
             <p class="footer_text">Ver 1.7 - 로또톡톡으로 변경 (코드만)(음성리딩 개발중)+번호별색변경,당첨된 번호 크롤링개발중<span> 24-01-01/05</span></p>
@@ -669,7 +664,7 @@
         https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=1100
 
         이렇게 주소가 있는데 
-        drwNo=를 한국서울 시 기준으로 매주 토요일 8시 36분이 되면 1씩 더해줄수있어?
+        drwNo=를 한국서울 시 기준으로 매주 토요일 8시 36분이 되면 1씩 더해줄수있?
         */
 
 
@@ -768,7 +763,7 @@
     - 복사됏음 팝업뜨고 뒤로가기 누르면 히스토리 백 되게?  해서 아무튼. 팝업닫게끔.
     - 나중에 BK테마로 바꾸기 (bg #2C363F)
     - 내 카톡으로 보내기
-    -소리로 읽어주기
+    - 소리로 읽어주기
 
     
     [🟡]
@@ -786,14 +781,17 @@
     - alert이 아닌 popup으로 복사한 숫자 보여주기
     - 뽑아진 6자리 수를 오름차순으로 정렬해서 보이기
     - Hesper's ins.... padding이상. (수정후, none시켜놓음)
-    - Icon logo Redesign(🔪)
+    - Icon logo 챗또로 Redesign(🔪)
     - 게임별 X 표시 (전체복사 눌렀을때 X는 안 떠야함) 
     - 게임 취소 X버튼 : 모두 비활성화 후, 재활성화시 제목,확인버튼 오류수정
     - PC 버전 
 
+
     [App_update🔪]
-    -앱 아이콘 그라데이션 준거로 수정
-    -앱 이름 수정
+    -앱 아이콘 챗또 그라데이션 준거로 수정
+    -앱 이름 챗또로 수정
+
+    -0311 새로운 BI 적립 및 앱 아이콘 제작(챗또->로또톡톡)
         
     [Check ✅]
    
