헤더 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="all_center_wrap">
             <!-- <p class="big_title">LOTTO TALKTALK</p> -->
             <div class="big_tit_logo">
-                    <img class="" src="/asset/로또톡톡_헤더.png">
+                    <img class="" src="asset/로또톡톡_헤더.png">
             </div>
 
             <div class="group_inner_gap_wrap">
